# Toadster-Bot

./: .gitignore  gitcomm.bat  gitcommit.bat  main.py  pyproject.toml  secrets.json
Cogs/: dev_commands.py  error.py  fun.py  help.py  listeners.py  misc.py  moderation.py  music.py  slashcommands.py  usercommands.py
Toadster Bot/Cogs/: dev_commands.py  fun.py  listeners.py
Toadster Bot/dicts/: deleted_messages.json  levels.json
dicts/: deleted_messages.json  levels.json  warns.json
