[tool.poetry]
name = "repl_python3_Toadster-Bot"
version = "0.1.0"
description = ""
authors = ["osam7a <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
art = "^5.3"
"dislash.py" = "^1.4.9"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
